--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
@@ -25,14 +24,19 @@
           </ul>
         </div>
         <div class="account">
-          <a href="#">Ingresar</a>
         </div>
-        <div class="solicitud"><button type="¡SOLICITAR YA!" name="button">SOLICITAR YA</button></div>
+        <div class="solicitud">
+          <a href="#">Ingresar</a>
+          <button type="¡SOLICITAR YA!" name="button" class="btn">solicitas crédito</button>
+        </div>
       </nav>
       <main>
       <h1>¡Solicitá dinero de manera fácil!</h1>
       <h2>Sin papeles ni demoras</h2>
-      <div class="modal"></div>
+            <div class="caja">
+              <h3>¡pedí tu adelanto!</h3>
+              <input type="range" name="" value="">
+            </div>
     </main>
     </header>
 </html>
