--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h2>Sin papeles ni demoras</h2>
             <div class="caja">
               <h3>¡pedí tu adelanto!</h3>
-              <input type="range" name="" value="">
+              <input type="range" name="" value="" min="1" max="5">
             </div>
     </main>
     </header>
