--- a/index.html
+++ b/index.html
@@ -32,11 +32,37 @@
       </nav>
       <main>
       <h1>¡Solicitá dinero de manera fácil!</h1>
-      <h2>Sin papeles ni demoras</h2>
-            <div class="caja">
-              <h3>¡pedí tu adelanto!</h3>
-              <input type="range" name="" value="" min="1" max="5">
+            <div class="box">
+              <h3>Pedí tu adelanto</h3>
+                <input type="range" name="" value="" min="1" max="5">
+              <div class="number">
+              <p>$1000</p><p>$2000</p><p>$3000</p><p>$4000</p><p>$5000</p>
+              </div>
+            <div class="ticket"id="answer">
+              <div>
+                <span class="title-answe">Pediste:<output class="return">$1000</output></span>
+              </div>
+              <div>
+                <span class="title-answe">Interés:<output class="return">$1000</output></span>
+              </div>
+              <div>
+                <span class="title-answe">Servicio:<output class="return">$1000</output></span>
+              </div>
+              <div>
+                <span class="title-answe">IVA:<output class="return">$1000</output></span>
+              </div>
+              <div>
+                <span class="title-answe">Devolvés:<output class="return">$1000</output></span>
+              </div>
+              <div>
+                <span class="title-answe">Fecha de devolución:<output class="return">$1000</output></span>
+              </div>
+            </div>
+            <button type="¡SOLICITAR YA!" name="button" class="btn-medium">solicitas crédito</button>
             </div>
     </main>
     </header>
+    <section class="container">
+      <h2 class="title">Obtené tu crédito personal en pocos pasos</h2>
+    </section>
 </html>
