--- a/index.html
+++ b/index.html
@@ -1,68 +1,173 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>AdelantosYA</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="logo">
-        </div>
-        <div class="menu">
-          <ul>
-            <li>REQUISITOS</li>
-            <li>VENTAJAS</li>
-            <li>PREGUNTAS FRECUENTES</li>
-            <li>CONTACTO</li>
-          </ul>
-        </div>
-        <div class="account">
-        </div>
-        <div class="solicitud">
-          <a href="#">Ingresar</a>
-          <button type="¡SOLICITAR YA!" name="button" class="btn">solicitas crédito</button>
-        </div>
-      </nav>
-      <main>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="icomoon/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>AdelantosYA</title>
+</head>
+<body>
+  <header>
+    <nav>
+      <div class="logo">
+      </div>
+      <div class="menu">
+        <ul>
+          <li>REQUISITOS</li>
+          <li>VENTAJAS</li>
+          <li>PREGUNTAS FRECUENTES</li>
+          <li>CONTACTO</li>
+        </ul>
+      </div>
+      <div class="account">
+      </div>
+      <div class="solicitud">
+        <a href="#">Ingresar</a>
+        <button type="¡SOLICITAR YA!" name="button" class="btn">solicitas crédito</button>
+      </div>
+    </nav>
+    <main>
       <h1>¡Solicitá dinero de manera fácil!</h1>
-            <div class="box">
-              <h3>Pedí tu adelanto</h3>
-                <input type="range" name="" value="" min="1" max="5">
-              <div class="number">
-              <p>$1000</p><p>$2000</p><p>$3000</p><p>$4000</p><p>$5000</p>
-              </div>
-            <div class="ticket"id="answer">
-              <div>
-                <span class="title-answe">Pediste:<output class="return">$1000</output></span>
-              </div>
-              <div>
-                <span class="title-answe">Interés:<output class="return">$1000</output></span>
-              </div>
-              <div>
-                <span class="title-answe">Servicio:<output class="return">$1000</output></span>
-              </div>
-              <div>
-                <span class="title-answe">IVA:<output class="return">$1000</output></span>
-              </div>
-              <div>
-                <span class="title-answe">Devolvés:<output class="return">$1000</output></span>
-              </div>
-              <div>
-                <span class="title-answe">Fecha de devolución:<output class="return">$1000</output></span>
-              </div>
-            </div>
-            <button type="¡SOLICITAR YA!" name="button" class="btn-medium">solicitas crédito</button>
-            </div>
+      <div class="box">
+        <h3>Pedí tu adelanto</h3>
+        <input type="range" name="" value="" min="1" max="5">
+        <div class="number">
+          <p>$1000</p><p>$2000</p><p>$3000</p><p>$4000</p><p>$5000</p>
+        </div>
+        <div class="ticket"id="answer">
+          <div>
+            <span class="title-answe">Pediste:<output class="return">$1000</output></span>
+          </div>
+          <div>
+            <span class="title-answe">Interés:<output class="return">$1000</output></span>
+          </div>
+          <div>
+            <span class="title-answe">Servicio:<output class="return">$1000</output></span>
+          </div>
+          <div>
+            <span class="title-answe">IVA:<output class="return">$1000</output></span>
+          </div>
+          <div>
+            <span class="title-answe">Devolvés:<output class="return">$1000</output></span>
+          </div>
+          <div>
+            <span class="title-answe">Fecha de devolución:<output class="return">$1000</output></span>
+          </div>
+        </div>
+        <button type="¡SOLICITAR YA!" name="button" class="btn-medium">solicitas crédito</button>
+      </div>
     </main>
-    </header>
-    <section class="container">
-      <h2 class="title">Obtené tu crédito personal en pocos pasos</h2>
-    </section>
+  </header>
+  <section class="pocos-pasos">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 margin-top">
+          <h2 class="title">Obtené tu crédito personal</h2>
+          <h2 class="title">en pocos pasos</h2>
+
+        </div>
+        <div class="row margin-top">
+          <div class="col-md-6">
+            <div class="imagen"><img src="img/pocos-pasos.png" alt="background-image"></div>
+          </div>
+          <div class="col-md-6">
+            <div class="paragraph">
+              <span class="subtitle">01. Solicitud</span>
+              <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="paragraph">
+              <span class="subtitle">02. Depósito</span>
+              <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="paragraph">
+              <span class="subtitle">03. Devolución</span>
+              <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="violet">
+              <div class="tilde">
+                <img src="img/tilde.png" alt="v" class="tilde">
+              </div>
+              <div>
+                <p class="violet-typo">
+                  Devolvé el adelanto en fecha y mejorá las condiciones
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="requirements">
+    <div class="container">
+      <h2 class="title">Requisitos</h2>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="subtitle-req">¿Qué necesitás para solicitar tu préstamo?</p>
+        </div>
+        <div class="col-md-4 center">
+          <img src="img/ser-mayor.png" alt="Ser mayor">
+          <p class="subtitle">Ser mayor de 18 años</p>
+        </div>
+        <div class="col-md-4 center">
+          <img src="img/homebancking.png" alt="Homebancking">
+          <p class="subtitle">Poseer una cuenta bancaria</p>
+        </div>
+        <div class="col-md-4 center">
+          <img src="img/celphone.png" alt="Celphone">
+            <p class="subtitle">Tener celular</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="ventajas">
+    <div class="container">
+      <h2 class="title margin-top">Ventajas</h2>
+    <div class="row">
+      <div class="col-md-4 center">
+        <figure>
+          <img src="img/ventajas/1.png" alt="Seguridada">
+          <figcaption class="subtitle-b">Es fácil y seguro</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+      <div class="col-md-4 center">
+        <figure>
+          <img src="img/ventajas/2.png" alt="Aprobación">
+          <figcaption class="subtitle-b">Aprobación rápida</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+      <div class="col-md-4 center">
+        <figure>
+          <img src="img/ventajas/3.png" alt="On line">
+          <figcaption class="subtitle-b">En homebanking</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 center">
+        <figure>
+          <img src="img/ventajas/4.png" alt="Documentación">
+          <figcaption class="subtitle-b">Sin documentación</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+      <div class="col-md-6 center">
+        <figure>
+          <img src="img/ventajas/5.png" alt="Seguridad">
+          <figcaption class="subtitle-b">100% Seguro</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+    </div>
+    </div>
+  </section>
+</body>
 </html>
