--- a/index.html
+++ b/index.html
@@ -14,17 +14,57 @@
 </head>
 <body>
   <header>
+<div class="layout">
+    <div class="header">
+        <div class="header-top">
+            <div data-link="" class="app-menu-burger OSFillParent" href="#" id="b2-Menu">
+                <div data-container="" class="app-menu-line"></div>
+                <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
+                <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
+            </div>
+        </div>
+    </div>
+
+    <div data-container="" class="center-content">
+        <div class="center-content-header ph" id="b3-Top"></div>
+        <div class="center-content-container ph" id="b3-Center">
+            <div data-container="">
+            </div>
+        </div>
+        <div class="center-content-bottom ph" id="b3-Bottom"></div>
+    </div>
+
+    <div class="menu">
+        <div class="menu-background" style="cursor: pointer;"></div>
+        <div class="app-menu-container">
+            <div class="app-menu">
+                <div class="top">
+                    <div class="top-overlay">
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="list-item">REQUISITOS</div>
+                    <div class="list-item">VENTAJAS</div>
+                    <div class="list-item">PREGUNTAS FRECUENTES</div>
+                    <div class="list-item">CONTACTO</div>
+                    <div class="list-item">Ingresar</div>
+                    <div class="list-item">SOLICITAR CRÉDITO</div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
 
     <div class="container">
       <nav>
         <div class="logo">
         </div>
-        <div class="menu">
+        <div class="menu-desktop">
           <ul>
-            <li><a href="#" class="menu-b">REQUISITOS</a></li>
-            <li><a href="#" class="menu-b">VENTAJAS</a></li>
-            <li><a href="#" class="menu-b">PREGUNTAS FRECUENTES</a></li>
-            <li><a href="#" class="menu-b">CONTACTO</a></li>
+            <li><a href="#" class="menu-b">REQUISITOS</a> |</li>
+            <li><a href="#" class="menu-b">VENTAJAS</a> | </li>
+            <li><a href="#" class="menu-b">PREGUNTAS FRECUENTES</a> | </li>
+            <li><a href="#" class="menu-b">CONTACTO</a> </li>
           </ul>
         </div>
         <div class="solicitud">
@@ -57,7 +97,7 @@
                 <p class="title-answer">Devolvés:</p><output class="return">$1000</output>
               </div>
               <div>
-                <p class="title-answe">Fecha de devolución:<output class="return">$1000</output></span>
+                <p class="title-answe">Fecha de devolución:</p><output class="return">$1000</output>
                 </div>
               </div>
               <button type="¡SOLICITAR YA!" name="button" class="btn-medium">solicitas crédito</button>
@@ -213,5 +253,6 @@
       <div class="comodo">
       </div>
     </footer>
+    <script src="js/function.js" charset="utf-8"></script>
   </body>
   </html>
