--- a/index.html
+++ b/index.html
@@ -7,53 +7,53 @@
   <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/icomoon/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-  <link rel="stylesheet" href="/css/menu-mobile.css">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/app.css">
   <title>AdelantosYA</title>
 </head>
 <body>
   <header>
-<div class="layout">
-    <div class="header">
+    <div class="layout">
+      <div class="header">
         <div class="header-top">
-            <div data-link="" class="app-menu-burger OSFillParent" href="#" id="b2-Menu">
-                <div data-container="" class="app-menu-line"></div>
-                <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
-                <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
-            </div>
+          <div data-link="" class="app-menu-burger OSFillParent" href="#" id="b2-Menu">
+            <div data-container="" class="app-menu-line"></div>
+            <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
+            <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div data-container="" class="center-content">
+      <div data-container="" class="center-content">
         <div class="center-content-header ph" id="b3-Top"></div>
         <div class="center-content-container ph" id="b3-Center">
-            <div data-container="">
-            </div>
+          <div data-container="">
+          </div>
         </div>
         <div class="center-content-bottom ph" id="b3-Bottom"></div>
-    </div>
+      </div>
 
-    <div class="menu">
+      <div class="menu">
         <div class="menu-background" style="cursor: pointer;"></div>
         <div class="app-menu-container">
-            <div class="app-menu">
-                <div class="top">
-                    <div class="top-overlay">
-                    </div>
-                </div>
-                <div class="bottom">
-                    <div class="list-item">REQUISITOS</div>
-                    <div class="list-item">VENTAJAS</div>
-                    <div class="list-item">PREGUNTAS FRECUENTES</div>
-                    <div class="list-item">CONTACTO</div>
-                    <div class="list-item">Ingresar</div>
-                    <div class="list-item">SOLICITAR CRÉDITO</div>
-                </div>
+          <div class="app-menu">
+            <div class="top">
+              <div class="top-overlay">
+              </div>
             </div>
+            <div class="bottom">
+              <div class="list-item">REQUISITOS</div>
+              <div class="list-item">VENTAJAS</div>
+              <div class="list-item">PREGUNTAS FRECUENTES</div>
+              <div class="list-item">CONTACTO</div>
+              <div class="list-item">Ingresar</div>
+              <div class="list-item btn-small">SOLICITAR CRÉDITO</div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-  </div>
 
     <div class="container">
       <nav>
@@ -74,185 +74,187 @@
       </nav>
       <div class="row">
         <div class="col-md-12">
-          <div class="box">
-            <h1>¡Solicitá dinero de manera fácil!</h1>
-            <input type="range" name="" value="" min="1" max="5">
-            <div class="number">
-              <p>$1000</p><p>$2000</p><p>$3000</p><p>$4000</p><p>$5000</p>
+        </div>
+        <div class="box">
+          <h1>¡Solicitá dinero de manera fácil!</h1>
+          <input type="range" name="" value="" min="1" max="5">
+          <div class="number">
+            <p>$1000</p><p>$2000</p><p>$3000</p><p>$4000</p><p>$5000</p>
+          </div>
+          <div class="ticket">
+            <div>
+              <p>Pediste:</p><output class="return">$1000</output>
             </div>
-            <div class="ticket">
-              <div>
-                <p>Pediste:</p><output class="return">$1000</output>
-              </div>
-              <div>
-                <p>Interés:</p><output class="return">$1000</output>
-              </div>
-              <div>
-                <p>Servicio:</p><output class="return">$1000</output>
-              </div>
-              <div>
-                <p>IVA:</p><output class="return">$1000</output>
-              </div>
-              <div>
-                <p class="title-answer">Devolvés:</p><output class="return">$1000</output>
-              </div>
-              <div>
-                <p class="title-answe">Fecha de devolución:</p><output class="return">$1000</output>
-                </div>
-              </div>
-              <button type="¡SOLICITAR YA!" name="button" class="btn-medium">solicitas crédito</button>
+            <div>
+              <p>Interés:</p><output class="return">$1000</output>
+            </div>
+            <div>
+              <p>Servicio:</p><output class="return">$1000</output>
+            </div>
+            <div>
+              <p>IVA:</p><output class="return">$1000</output>
+            </div>
+            <div>
+              <p class="title-answer">Devolvés:</p><output class="return">$1000</output>
+            </div>
+            <div>
+              <p class="title-answe">Fecha de devolución:</p><output class="return">$1000</output>
             </div>
           </div>
+          <button type="¡SOLICITAR YA!" name="button" class="btn-medium">solicitas crédito</button>
         </div>
       </div>
-    </header>
-    <section class="pocos-pasos">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 title">
-            <h2 class="title">Obtené tu crédito personal</h2>
-            <h2 class="title">en pocos pasos</h2>
+    </div>
+  </div>
+</header>
+<section class="pocos-pasos">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 title">
+        <h2 class="title">Obtené tu crédito personal</h2>
+        <h2 class="title">en pocos pasos</h2>
 
+      </div>
+      <div class="row title">
+        <div class="col-md-6">
+          <div class="imagen"><img src="img/pocos-pasos.png" alt="background-image"></div>
+        </div>
+        <div class="col-md-6">
+          <div class="paragraph">
+            <span class="subtitle">01. Solicitud</span>
+            <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <div class="row title">
-            <div class="col-md-6">
-              <div class="imagen"><img src="img/pocos-pasos.png" alt="background-image"></div>
+          <div class="paragraph">
+            <span class="subtitle">02. Depósito</span>
+            <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="paragraph">
+            <span class="subtitle">03. Devolución</span>
+            <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="violet">
+            <div class="tilde">
+              <img src="img/tilde.png" alt="v" class="tilde">
             </div>
-            <div class="col-md-6">
-              <div class="paragraph">
-                <span class="subtitle">01. Solicitud</span>
-                <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-              <div class="paragraph">
-                <span class="subtitle">02. Depósito</span>
-                <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-              <div class="paragraph">
-                <span class="subtitle">03. Devolución</span>
-                <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-              <div class="violet">
-                <div class="tilde">
-                  <img src="img/tilde.png" alt="v" class="tilde">
-                </div>
-                <div>
-                  <p class="violet-typo">
-                    Devolvé el adelanto en fecha y mejorá las condiciones
-                  </p>
-                </div>
-              </div>
+            <div>
+              <p class="violet-typo">
+                Devolvé el adelanto en fecha y mejorá las condiciones
+              </p>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <section class="requirements">
-      <div class="container">
-        <h2 class="title">Requisitos</h2>
-        <div class="row">
-          <div class="col-md-12">
-            <p class="subtitle-req">¿Qué necesitás para solicitar tu préstamo?</p>
-          </div>
-          <div class="col-md-4 center">
-            <img src="img/ser-mayor.png" alt="Ser mayor">
-            <p class="subtitle">Ser mayor de 18 años</p>
-          </div>
-          <div class="col-md-4 center">
-            <img src="img/homebancking.png" alt="Homebancking">
-            <p class="subtitle">Poseer una cuenta bancaria</p>
-          </div>
-          <div class="col-md-4 center">
-            <img src="img/celphone.png" alt="Celphone">
-            <p class="subtitle">Tener celular</p>
-          </div>
-        </div>
+    </div>
+  </div>
+</section>
+<section class="requirements">
+  <div class="container">
+    <h2 class="title">Requisitos</h2>
+    <div class="row">
+      <div class="col-md-12">
+        <p class="subtitle-req">¿Qué necesitás para solicitar tu préstamo?</p>
       </div>
-    </section>
-    <section class="ventajas">
-      <div class="container">
-        <h2 class="title">Ventajas</h2>
-        <div class="row">
-          <div class="col-md-4 center">
-            <figure>
-              <img src="img/ventajas/1.png" alt="Seguridada">
-              <figcaption class="subtitle-b">Es fácil y seguro</figcaption>
-              <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-            </figure>
-          </div>
-          <div class="col-md-4 center">
-            <figure>
-              <img src="img/ventajas/2.png" alt="Aprobación">
-              <figcaption class="subtitle-b">Aprobación rápida</figcaption>
-              <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-            </figure>
-          </div>
-          <div class="col-md-4 center">
-            <figure>
-              <img src="img/ventajas/3.png" alt="On line">
-              <figcaption class="subtitle-b">En homebanking</figcaption>
-              <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-            </figure>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 center">
-            <figure>
-              <img src="img/ventajas/4.png" alt="Documentación">
-              <figcaption class="subtitle-b">Sin documentación</figcaption>
-              <p class="definition-c">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-            </figure>
-          </div>
-          <div class="col-md-6 center">
-            <figure>
-              <img src="img/ventajas/5.png" alt="Seguridad">
-              <figcaption class="subtitle-b">100% Seguro</figcaption>
-              <p class="definition-c">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-            </figure>
-          </div>
-        </div>
+      <div class="col-md-4 center">
+        <img src="img/ser-mayor.png" alt="Ser mayor">
+        <p class="subtitle">Ser mayor de 18 años</p>
       </div>
-    </section>
-    <section class="contact">
-      <div class="container">
-        <h2 class="title">¿Todavía tenés dudas?</h2>
-        <h2 class="title">Contactanos</h2>
-        <div class="row">
-          <col-md-12>
-          <div class="box">
-            <input type="name" name="Nombre y Apellido" value="Nombre y Apellido" class="email">
-            <input type="tel" name="Teléfono" value="Teléfono" class="email">
-            <input type="email" name="Email" value="Email" class="email">
-            <input type="submit" name="Enviar" value="Enviar" class="btn-small">
-          </div>
-        </div>
+      <div class="col-md-4 center">
+        <img src="img/homebancking.png" alt="Homebancking">
+        <p class="subtitle">Poseer una cuenta bancaria</p>
       </div>
+      <div class="col-md-4 center">
+        <img src="img/celphone.png" alt="Celphone">
+        <p class="subtitle">Tener celular</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="ventajas">
+  <div class="container">
+    <h2 class="title">Ventajas</h2>
+    <div class="row">
+      <div class="col-md-4 center">
+        <figure>
+          <img src="img/ventajas/1.png" alt="Seguridada">
+          <figcaption class="subtitle-b">Es fácil y seguro</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+      <div class="col-md-4 center">
+        <figure>
+          <img src="img/ventajas/2.png" alt="Aprobación">
+          <figcaption class="subtitle-b">Aprobación rápida</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+      <div class="col-md-4 center">
+        <figure>
+          <img src="img/ventajas/3.png" alt="On line">
+          <figcaption class="subtitle-b">En homebanking</figcaption>
+          <p class="definition-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 center">
+        <figure>
+          <img src="img/ventajas/4.png" alt="Documentación">
+          <figcaption class="subtitle-b">Sin documentación</figcaption>
+          <p class="definition-c">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+      <div class="col-md-6 center">
+        <figure>
+          <img src="img/ventajas/5.png" alt="Seguridad">
+          <figcaption class="subtitle-b">100% Seguro</figcaption>
+          <p class="definition-c">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+        </figure>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="contact">
+  <div class="container">
+    <h2 class="title">¿Todavía tenés dudas?</h2>
+    <h2 class="title">Contactanos</h2>
+    <div class="row">
+      <col-md-12>
+      <div class="box">
+        <input type="name" name="Nombre y Apellido" value="Nombre y Apellido" class="email">
+        <input type="tel" name="Teléfono" value="Teléfono" class="email">
+        <input type="email" name="Email" value="Email" class="email">
+        <input type="submit" name="Enviar" value="Enviar" class="btn-small">
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+<section class="testimony">
+  <div>
+    <p class="result">$20.000.000</p>
+    <p class="people">en préstamos</p>
+  </div>
+  <div>
+    <p class="result">8.300</p>
+    <p class="people">usuarios</p></div>
+    <div>
+      <p class="result">50.000</p>
+      <p class="people">clientes</p>
     </div>
   </section>
-  <section class="testimony">
-    <div>
-      <p class="result">$20.000.000</p>
-      <p class="people">en préstamos</p>
+  <footer>
+    <div class="logo">
+    </div>
+    <div class="terminos">
+      <a href="#">Términos y condiciones</a>
+    </div>
+    <div class="terminos">
+      <a href="#">Políticas de privacidad</a>
     </div>
     <div>
-      <p class="result">8.300</p>
-      <p class="people">usuarios</p></div>
-      <div>
-        <p class="result">50.000</p>
-        <p class="people">clientes</p>
-      </div>
-    </section>
-    <footer>
-      <div class="logo">
-      </div>
-      <div class="terminos">
-        <a href="#">Términos y condiciones</a>
-      </div>
-      <div class="terminos">
-        <a href="#">Políticas de privacidad</a>
-      </div>
-      <div class="comodo">
-      </div>
-    </footer>
-    <script src="js/function.js" charset="utf-8"></script>
-  </body>
-  </html>
+      <i class="icon-8.2-17"></i>
+    </div>
+  </footer>
+  <script src="js/function.js" charset="utf-8"></script>
+</body>
+</html>
