--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/icomoon/style.css">
+  <link rel="stylesheet" href="/icomoon/fonts/icomoon.svg">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="/css/app.css">
   <title>AdelantosYA</title>
@@ -69,7 +69,6 @@
         </div>
         <div class="solicitud">
           <a href="#">Ingresar</a>
-          <button type="solicitud" name="button" class="btn">solicitar crédito</button>
         </div>
       </nav>
       <div class="row">
