--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/icomoon/fonts/icomoon.svg">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="/css/app.css">
   <title>AdelantosYA</title>
@@ -48,7 +47,7 @@
               <div class="list-item">PREGUNTAS FRECUENTES</div>
               <div class="list-item">CONTACTO</div>
               <div class="list-item">Ingresar</div>
-              <div class="list-item btn-small">SOLICITAR CRÉDITO</div>
+              <button type="solicitud" name="button" class="btn">solicitar crédito</button>
             </div>
           </div>
         </div>
