--- a/index.html
+++ b/index.html
@@ -80,23 +80,23 @@
             <p>$1000</p><p>$2000</p><p>$3000</p><p>$4000</p><p>$5000</p>
           </div>
           <div class="ticket">
-            <div>
+            <div  class="title-answer">
               <p>Pediste:</p><output class="return">$1000</output>
             </div>
-            <div>
+            <div class="title-answer">
               <p>Interés:</p><output class="return">$1000</output>
             </div>
-            <div>
+            <div class="title-answer">
               <p>Servicio:</p><output class="return">$1000</output>
             </div>
-            <div>
+            <div class="title-answer">
               <p>IVA:</p><output class="return">$1000</output>
             </div>
-            <div>
-              <p class="title-answer">Devolvés:</p><output class="return">$1000</output>
+            <div class="title-answer">
+              <p>Devolvés:</p><output class="return">$1000</output>
             </div>
-            <div>
-              <p class="title-answe">Fecha de devolución:</p><output class="return">$1000</output>
+            <div class="title-answe">
+              <p>Fecha de devolución:</p><output class="return">$1000</output>
             </div>
           </div>
           <button type="¡SOLICITAR YA!" name="button" class="btn-medium">solicitas crédito</button>
