--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
             <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
           </div>
+          <div class="logo">
+          </div>
         </div>
       </div>
 
@@ -46,7 +48,7 @@
               <div class="list-item">VENTAJAS</div>
               <div class="list-item">PREGUNTAS FRECUENTES</div>
               <div class="list-item">CONTACTO</div>
-              <div class="list-item">Ingresar</div>
+              <div class="list-item">Mi cuenta</div>
               <button type="solicitud" name="button" class="btn">solicitar crédito</button>
             </div>
           </div>
@@ -67,7 +69,7 @@
           </ul>
         </div>
         <div class="solicitud">
-          <a href="#">Ingresar</a>
+          <a href="#">Mi cuenta</a>
         </div>
       </nav>
       <div class="row">
@@ -80,22 +82,22 @@
             <p>$1000</p><p>$2000</p><p>$3000</p><p>$4000</p><p>$5000</p>
           </div>
           <div class="ticket">
-            <div  class="title-answer">
+            <div  class="title-answer underscore">
               <p>Pediste:</p><output class="return">$1000</output>
             </div>
-            <div class="title-answer">
+            <div class="title-answer underscore">
               <p>Interés:</p><output class="return">$1000</output>
             </div>
-            <div class="title-answer">
+            <div class="title-answer underscore">
               <p>Servicio:</p><output class="return">$1000</output>
             </div>
-            <div class="title-answer">
+            <div class="title-answer underscore underscore">
               <p>IVA:</p><output class="return">$1000</output>
             </div>
-            <div class="title-answer">
+            <div class="title-answer underscore">
               <p>Devolvés:</p><output class="return">$1000</output>
             </div>
-            <div class="title-answe">
+            <div class="title-answer underscore underscore">
               <p>Fecha de devolución:</p><output class="return">$1000</output>
             </div>
           </div>
@@ -119,16 +121,16 @@
         </div>
         <div class="col-md-6">
           <div class="paragraph">
-            <span class="subtitle">01. Solicitud</span>
-            <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <span class="subtitle">01. Completas tus datos</span>
+            <p class="definition">Con solo tus datos personales ya podes aplicar a un credito</p>
           </div>
           <div class="paragraph">
-            <span class="subtitle">02. Depósito</span>
-            <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <span class="subtitle">02. Te aprobamos el credito</span>
+            <p class="definition">Aprobaciones en el momento sin esperas.</p>
           </div>
           <div class="paragraph">
-            <span class="subtitle">03. Devolución</span>
-            <p class="definition">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <span class="subtitle">03. Tenes la plata en tu cuenta</span>
+            <p class="definition">Transferimos tu credito en menos de 1 hora habil.</p>
           </div>
           <div class="violet">
             <div class="tilde">
