--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </ul>
         </div>
         <div class="solicitud">
-          <a href="#">Mi cuenta</a>
+          <a href="#"><div class="user"></div>Mi cuenta</a>
         </div>
       </nav>
       <div class="row">
@@ -111,9 +111,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 title">
-        <h2 class="title">Obtené tu crédito personal</h2>
-        <h2 class="title">en pocos pasos</h2>
-
+          <h2 class="title">Obtené tu crédito personal</h2>
+          <h2 class="title">en pocos pasos</h2>
+          <div class="bbottom">
+          </div>
       </div>
       <div class="row title">
         <div class="col-md-6">
@@ -150,6 +151,7 @@
 <section class="requirements">
   <div class="container">
     <h2 class="title">Requisitos</h2>
+    <div class="bbottom"></div>
     <div class="row">
       <div class="col-md-12">
         <p class="subtitle-req">¿Qué necesitás para solicitar tu préstamo?</p>
@@ -172,6 +174,7 @@
 <section class="ventajas">
   <div class="container">
     <h2 class="title">Ventajas</h2>
+    <div class="bbottom"></div>
     <div class="row">
       <div class="col-md-4 center">
         <figure>
@@ -217,6 +220,7 @@
   <div class="container">
     <h2 class="title">¿Todavía tenés dudas?</h2>
     <h2 class="title">Contactanos</h2>
+    <div class="bbottom"></div>
     <div class="row">
       <col-md-12>
       <div class="box">
@@ -246,13 +250,16 @@
     <div class="logo">
     </div>
     <div class="terminos">
-      <a href="#">Términos y condiciones</a>
+      <a href="#" class="result">Ayuda</a>
+      <a href="#" class="people">Términos y condiciones</a>
     </div>
     <div class="terminos">
-      <a href="#">Políticas de privacidad</a>
+      <a href="#" class="result">Políticas de privacidad</a>
+      <a href="#" class="people">Políticas de privacidad</a>
     </div>
-    <div>
-      <i class="icon-8.2-17"></i>
+    <div class="terminos">
+      <a href="#" class="result">Políticas de privacidad</a>
+      <a href="#" class="people">Políticas de privacidad</a>
     </div>
   </footer>
   <script src="js/function.js" charset="utf-8"></script>
